[package]
name = "scoreboard"
version = "0.1.0"
authors = ["rfsx0829 <rfsx0829@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-serialize = "*"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures-util = { version = "0.3", default-features = false }
iron = "*"
postgres = "*"
router = "*"
log = "*"
persistent = "*"
r2d2 = "*"
r2d2_postgres = "*"

